# estropadak-fastapi

./: .gitignore  Dockerfile  Readme.md  config.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/common/: errors.py  utils.py
app/dao/: __init__.py  db_connection.py  emaitzak.py  estatistikak.py  estropadak.py  plantilak.py  sailkapenak.py  taldeak.py  years.py
app/dao/models/: estropadak.py  sailkapenak.py
app/logic/: emaitzak.py  estatistikak.py  estropadak.py  sailkapenak.py
app/models/: emaitzak.py  estatistikak.py  estropada_type.py  estropadak.py  sailkapenak.py  years.py
app/routes/: emaitzak.py  estatistikak.py  estropadak.py  sailkapenak.py  taldeak.py  years.py
tests/: test_emaitzak.py  test_estatistikak.py  test_estropadak.py  test_sailkapenak.py  test_taldeak.py  test_urteak.py
