[project]
name = "estropadak-fastapi"
version = "0.0.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.6.0",
    "anyio==3.7.1",
    "authlib==1.3.2",
    "certifi==2023.7.22",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "cryptography==43.0.1",
    "defusedxml==0.7.1",
    "dnspython==2.4.2",
    "email-validator==2.0.0.post2",
    "fastapi-jwt==0.3.0",
    "fastapi[standard]==0.115.0",
    "h11==0.14.0",
    "httpcore==0.18.0",
    "ibmcloudant==0.9.3",
    "idna==3.4",
    "iniconfig==2.0.0",
    "itsdangerous==2.1.2",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "multidict==6.1.0",
    "packaging==24.1",
    "pluggy==1.5.0",
    "pycparser==2.22",
    "pygments==2.18.0",
    "pyjwt==2.9.0",
    "pysocks==1.7.1",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.12",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==13.8.1",
    "shellingham==1.5.4",
    "sniffio==1.3.0",
    "textdistance==4.6.3",
    "typer==0.12.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
log_cli=false
log_cli_level="INFO"
addopts = "--cov=app --cov-report html:cov_html"
